[package]
name = "pinec"
version = "0.1.0"
authors = ["swgillespie <sean.william.g@gmail.com>"]

[dependencies.pine_common]
path = "../pine_common"

[dependencies.pine_syntax]
path = "../pine_syntax"

[dependencies.pine_typecheck]
path = "../pine_typecheck"

[dependencies.pine_trans]
path = "../pine_trans"

[dependencies]
rustc-serialize = "0.3.14"
env_logger = "0.3.1"
getopts = "0.2.11"
time = "0.1.26"